--- a/components/backend-tests-go-igbombif/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-igbombif/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-igbombif
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-igbombif:f54558b4f261c3c6818dacb94a8320352d5fdeaa@sha256:2b3fea4e6e399d4eca5b9b0fa3e81c0d2d61d11c93a3049df422d2ad0212542f
+          name: container-image
